# tensornote

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build-desktop.yml  build-web.yml
_app/: version.json
_app/immutable/assets/: 0.BkuYg82O.css  _layout.Du2exzQP.css  lib_clustering.DbC6mKPf.wasm
_app/immutable/chunks/: Cargo.XQolW2iV.js  EmbeddingAdapterWorker.Bm87vfl2.js  StorageAdapter.BxeVfabK.js  TauriFsAdapter.CBw18bgr.js  WebStorageAdapter.B7R8UAUK.js  entry.BuXrwQmP.js  entry.CB_s-6gd.js  entry.D-7Ivvqj.js  entry.D8QavGIv.js  entry.DfmDq-77.js  entry.PWkIECog.js  entry.WB4ce9qr.js  fs.WaXJNqoc.js  index.CXZKqRbH.js  scheduler.DSbAOlj-.js  tauri.D0GEGWO5.js
_app/immutable/entry/: app.B44HlPAx.js  app.BCuD0V6J.js  app.BEualWtg.js  app.BGwZs6FL.js  app.CtbMEYB1.js  app.MIkMdx7q.js  app.mM7sIxPg.js  start.0TUlgDBG.js  start.BrtfRfbt.js  start.C2Vjtjgt.js  start.Co9cXnID.js  start.CtQYRana.js  start.D8FNH80L.js  start.DqPwHHWm.js
_app/immutable/nodes/: 0.Bpw_nPew.js  1.C8LlbQ47.js  1.CIY3rnfH.js  1.CPs3SDFk.js  1.Cb1Z3bB5.js  1.DSdAc4bL.js  1.DxrxrcaG.js  1.Y-Xwvkqi.js  2.CSYtlXc7.js  2.iqdPk7Rh.js  2.sZ5u0CsO.js
_app/immutable/workers/: EmbeddingAdapterWorker-DzW3S58l.js
_app/immutable/workers/chunks/: transformers-DjrM31uB.js
docs/concept-whiteboards/: TensorNote_draft1.excalidraw  TensorNote_draft2.excalidraw  TensorNote_draft3.excalidraw  TensorNote_draft4.excalidraw
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/lib_clustering/: Cargo.toml
src-tauri/lib_clustering/src/: distfns.rs  lib.rs
src-tauri/src/: clustering.rs  cosdist.rs  distfns.rs  main.rs
src/lib/: BlockStore.ts  Keywords.ts  NavTree.ts  NavTreeHelpers.ts  PrintTree.ts
src/lib/embeddings/: AdapterWorker.ts  EmbeddingAdapter.ts  EmbeddingAdapterWorker.ts  LocalEmbeddingAdapter.ts  models.json
src/lib/storage/: StorageAdapter.ts  TauriFsAdapter.ts  WebStorageAdapter.ts
src/routes/: +layout.svelte  +page.svelte  InputBar.svelte  NavBar.svelte  NestedListNode.svelte  Notes.svelte
