workspace = { members = ["lib_clustering"] }
[package]
name = "app"
version = "0.1.0"
description = "TensorNote"
authors = ["Daniel Rashevsky"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
lib_clustering = { path = "./lib_clustering" }
tauri = { version = "1.6.0", features = [ "shell-all", "fs-all"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
