[package]
name = "lib_clustering"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.69"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-nn = "0.7.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand_xoshiro = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.92"